# android_logger-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml
examples/: system_log_level_overrides.rs
src/: arrays.rs  config.rs  id.rs  lib.rs  platform_log_writer.rs  tests.rs
tests/: config_log_level.rs  debug.rs  default_init.rs  log4rs.rs  multiple_init.rs
