[package]
name = "android_logger"
version = "0.13.3"
authors = ["The android_logger Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-mobile/android_logger-rs"
description = """
A logging implementation for `log` which hooks to android log output.
"""
keywords = ["android", "bindings", "log", "logger"]
categories = ["api-bindings"]
edition = "2021"

[features]
default = ["regex"]
regex = ["env_filter/regex"]

[dependencies]
once_cell = "1.9"
env_filter = "0.1.0"
env_logger = "0.11.2"

[dependencies.log]
version = "0.4"

[dependencies.android_log-sys]
version = "0.3"
