[package]
name = "android_logger"
version = "0.14.0"
authors = ["The android_logger Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-mobile/android_logger-rs"
description = """
A logging implementation for `log` which hooks to android log output.
"""
keywords = ["android", "bindings", "log", "logger"]
categories = ["api-bindings"]
edition = "2021"

[features]
default = ["regex"]
regex = ["env_filter/regex"]

[dependencies.log]
version = "0.4"

[dependencies.android_log-sys]
version = "0.3"

[dependencies.env_filter]
version = "0.1"
default-features = false
